# spic

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
apps/: spic_client.c
apps/include/: spic_filetransfer_interface.h
apps/spic_filetransfer_client/: spic_filetransfer_client.c
apps/spic_filetransfer_server/: spic_filetransfer_server.cpp
include/spic/: spic.h  spic_node.hpp
src/: spic.cpp  spic.hpp  spic_fifo.hpp  spic_fifo_node.cpp  spic_fifo_node.hpp  spic_message.hpp  spic_node.cpp  spic_sys_if.hpp
test/: CMakeLists.txt  test_spic.cpp  test_spic_c_api.cpp  test_spic_fifo_node.cpp  test_spic_fifo_node_message.cpp  test_spic_message.cpp  testspic.cpp
